# quant-api-platform

./: .dockerignore  .env.example  .firebaserc  .gitignore  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  RELEASE_v1.1.md  ROADMAP.md  STATUS.md  ai_effectiveness_report.json  docker-compose.yml  firebase.json  pyproject.toml  requirements.txt  start.bat
.claude/: launch.json
.firebase/: hosting.ZnJvbnRlbmQtcmVhY3RcZGlzdA.cache
docs/: ai-effectiveness-validation.md  api_keys.md  architecture.md  config.md  daily-workflow.md  data_contract.md  deployment.md  dq_framework.md  eod-freshness-lag-diagnosis-20260512.md  execution_policy.md  mirror-bootstrap-allowlist-report.md  mirror-bootstrap-execution-20260510.md  mirror-manual-ticker-persistence-plan.md  mirror-universe-and-market-events-plan.md  overnight-brief-scheduler-validation-20260512.md  overnight-continuation-20260510b.md  overnight-continuous-validation-20260513.md  overnight-mega-push-20260510.md  overnight-progress-20260509.md  overnight-taxonomy-market-brief-plan.md  pit_rules.md  platform-prediction-accuracy-20260512-final.md  platform-prediction-accuracy-20260512.md  prediction-model-shadow-roadmap.md  prediction-shadow-evaluation-framework.md  prediction-shadow-test-2-pre-registration.md  premarket-shadow-prediction-20260512-eval.md  premarket-shadow-prediction-20260512.json  premarket-shadow-prediction-20260512.md  premarket-shadow-prediction-20260515-v2.1-eval-attempt-20260516-pending.md  premarket-shadow-prediction-20260515-v2.1-eval.md  premarket-shadow-prediction-20260515-v2.1.json  runbook.md  (+17 more)
(+245 files in other folders)
